syntax = "proto3";
package cosmos.slashing.v1beta1;

option go_package            = "github.com/cosmos/cosmos-sdk/x/slashing/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message ValidatorSigningInfoLegacyMissedHeights {
  option (gogoproto.equal)            = true;

  string address = 1;
  // Height at which validator was first a candidate OR was unjailed
  int64 start_height = 2 [(gogoproto.moretags) = "yaml:\"start_height\""];
  // Timestamp until which the validator is jailed due to liveness downtime.
  google.protobuf.Timestamp jailed_until = 3
      [(gogoproto.moretags) = "yaml:\"jailed_until\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  // Whether or not a validator has been tombstoned (killed out of validator set). It is set
  // once the validator commits an equivocation or for any other configured misbehiavor.
  bool tombstoned = 4;
  // A counter kept to avoid unnecessary array reads.
  // Note that `Sum(MissedBlocksBitArray)` always equals `MissedBlocksCounter`.
  int64 missed_blocks_counter = 5 [(gogoproto.moretags) = "yaml:\"missed_blocks_counter\""];
}

// ValidatorSigningInfo defines a validator's signing info for monitoring their
// liveness activity.
message ValidatorSigningInfo {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  string address = 1;
  // Height at which validator was first a candidate OR was unjailed
  int64 start_height = 2 [(gogoproto.moretags) = "yaml:\"start_height\""];
  // Index which is incremented each time the validator was a bonded
  // in a block and may have signed a precommit or not. This in conjunction with the
  // `SignedBlocksWindow` param determines the index in the `MissedBlocksBitArray`.
  int64 index_offset = 3 [(gogoproto.moretags) = "yaml:\"index_offset\""];
  // Timestamp until which the validator is jailed due to liveness downtime.
  google.protobuf.Timestamp jailed_until = 4
      [(gogoproto.moretags) = "yaml:\"jailed_until\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  // Whether or not a validator has been tombstoned (killed out of validator set). It is set
  // once the validator commits an equivocation or for any other configured misbehiavor.
  bool tombstoned = 5;
  // A counter kept to avoid unnecessary array reads.
  // Note that `Sum(MissedBlocksBitArray)` always equals `MissedBlocksCounter`.
  int64 missed_blocks_counter = 6 [(gogoproto.moretags) = "yaml:\"missed_blocks_counter\""];
}

// Stores a sliding window of the last `signed_blocks_window` blocks indicating whether the validator missed the block
message ValidatorMissedBlockArrayLegacyMissedHeights {
  string address = 1;
  // Array of contains the heights when the validator missed the block
  repeated int64 missed_heights = 2 [(gogoproto.moretags) = "yaml:\"missed_heights\""];
}

// Stores a sliding window of the last `signed_blocks_window` blocks indicating whether the validator missed the block
message ValidatorMissedBlockArray {
  string address = 1;
  // store this in case window size changes but doesn't affect number of bit groups
  int64 window_size = 2;
  // Array of contains the missed block bits packed into uint64s
  repeated uint64 missed_blocks = 3 [(gogoproto.moretags) = "yaml:\"missed_blocks\""];
}

// Params represents the parameters used for by the slashing module.
message Params {
  int64 signed_blocks_window  = 1 [(gogoproto.moretags) = "yaml:\"signed_blocks_window\""];
  bytes min_signed_per_window = 2 [
    (gogoproto.moretags)   = "yaml:\"min_signed_per_window\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  google.protobuf.Duration downtime_jail_duration = 3 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags)    = "yaml:\"downtime_jail_duration\""
  ];
  bytes slash_fraction_double_sign = 4 [
    (gogoproto.moretags)   = "yaml:\"slash_fraction_double_sign\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  bytes slash_fraction_downtime = 5 [
    (gogoproto.moretags)   = "yaml:\"slash_fraction_downtime\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}
